k8s-on-premise-cloud/ai-agent/automation-patching-security-misconfiguration/opa-rule/runtime/container-ratio-rule.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerRatios 
metadata:
  name: container-ratios-rule  
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps", "extensions"]
        kinds: ["Deployment", "ReplicaSet", "DaemonSet", "StatefulSet"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: ["test", "movie-web-blue-green"]
  parameters:
    ratio: "5"  
    exemptImages: 
      - "istio/*"
      - "docker.io/istio/*"
      - "*.istio.io/*"
      - "service.istio.io/*"
      - "proxyv2"
  validationFailureAction: enforce
